cluster/apps/flux-system/notifications/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ${SECRET_DOMAIN}
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: flux-receiver.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - flux-receiver.${SECFRET_DOMAIN}
      secretName: flux-receiver-tls
